# x64-vm

./: CMakeLists.txt  README.md  debugger.hpp  disasm.hpp  exceptions.hpp  floating_point.cpp  handler_add_displaced_destination.cpp  handler_add_displaced_source.cpp  instruction.cpp  instruction_cache.cpp  instruction_modrm.hpp  instruction_opcode.hpp  instruction_operand.hpp  memory_pool.cpp  nested_virtualization.cpp  nested_virtualization.hpp  register.cpp  simd_instructions.cpp  spinner.hpp  thread_pool.cpp  unit_tests.cpp  virtual_machine.cpp  virtual_machine.hpp  virtual_memory.cpp  virtual_stack.cpp  virtual_stack.hpp  vm_test.hpp
.github/workflows/: ci-cd.yml
backup/: backup_manager.hpp
core/: CMakeLists.txt
debug/: CMakeLists.txt  debug_manager.hpp
docs/: API.md
fmt/: format.cc
graphics/: gpu_manager.hpp
instructions/: CMakeLists.txt
network/: network_manager.hpp
optimization/: performance_optimizer.hpp
security/: security_manager.hpp
src/: config_manager.cpp  config_manager.hpp  debugger.cpp  disasm.cpp  entry.cpp  floating_point.hpp  handler_add.cpp  handler_add.hpp  handler_add_byte.cpp  handler_unknown.cpp  instruction.hpp  instruction_cache.hpp  instruction_opcode.cpp  instruction_operand.cpp  instruction_prefix.hpp  instruction_rex.hpp  loggr.hpp  memory_pool.hpp  memory_protection.cpp  memory_protection.hpp  numerical_helper.hpp  simd_instructions.hpp  thread_pool.hpp  unit_tests.hpp
src/ai/: code_analyzer.cpp  code_analyzer.hpp
src/api/grpc/: service.cpp  service.proto
src/api/rest/: server.cpp
src/backup/: vm_snapshot.hpp
src/cloud/aws/: cloudformation.yaml
src/cloud/azure/: arm-template.json
src/cloud/gcp/: deployment-manager.yaml
src/config/: CMakeLists.txt
src/container/: Dockerfile
src/container/kubernetes/: deployment.yaml
src/core/: CMakeLists.txt  memory_protection.hpp  nested_virtualization.cpp  plugin_system.cpp  plugin_system.hpp  register.hpp  thread_pool.hpp  virtual_memory.hpp
src/debug/: CMakeLists.txt
src/distributed/: vm_migration.cpp  vm_migration.hpp
src/edge/: iot_optimized.cpp
src/graphics/: gpu_emulator.cpp  gpu_emulator.hpp
src/handlers/: CMakeLists.txt
src/instructions/: CMakeLists.txt
src/jit/: jit_compiler.cpp  jit_compiler.hpp
src/memory/: CMakeLists.txt  virtual_section.hpp
src/ml/pytorch/: optimization.cpp
src/ml/tensorflow/: optimization.cpp
src/monitoring/grafana/: dashboard.json
src/monitoring/prometheus/: metrics.cpp
src/network/: virtual_switch.hpp
src/security/: memory_encryption.cpp  memory_encryption.hpp
src/security/hsm/: hsm_manager.cpp
src/security/rasp/: CMakeLists.txt  rasp_manager.cpp  rasp_manager.h  rasp_manager.hpp
src/service-mesh/istio/: destination-rule.yaml  gateway.yaml  virtual-service.yaml
src/tests/: CMakeLists.txt
tests/: performance_tests.cpp
utils/: CMakeLists.txt
